--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
-  "name": "fusion-starter",
+  "name": "falcon-admin-dashboard",
   "private": true,
   "type": "module",
+  "version": "1.0.0",
+  "description": "Falcon Admin Dashboard - Modern React Admin Template",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "test": "vitest --run",
+    "test:watch": "vitest",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "docker:build": "docker build -t falcon-admin-dashboard .",
+    "docker:run": "docker run -p 3000:80 falcon-admin-dashboard",
+    "docker:dev": "npm run docker:build && npm run docker:run",
+    "docker:stop": "docker stop $(docker ps -q --filter ancestor=falcon-admin-dashboard)",
+    "docker:clean": "docker rmi falcon-admin-dashboard",
+    "serve": "npx serve dist -s -l 3000",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
+    "clean": "rimraf dist node_modules/.vite",
+    "clean:win": "if exist dist rmdir /s /q dist && if exist node_modules\\.vite rmdir /s /q node_modules\\.vite",
+    "fresh": "npm run clean && npm ci && npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "deploy:clean": "npm run build && gh-pages -d dist -f -m 'Clean deploy to GitHub Pages'",
+    "gh-pages:deploy": "npm run deploy",
+    "gh-pages:clean": "npm run deploy:clean"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -70,14 +91,40 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "vite": "^6.2.2",
+    "vite-bundle-analyzer": "^0.7.0",
     "vitest": "^3.1.4"
-  }
+  },
+  "keywords": [
+    "react",
+    "admin-dashboard",
+    "tailwindcss",
+    "typescript",
+    "vite",
+    "falcon",
+    "dashboard",
+    "admin-panel"
+  ],
+  "author": "Dy Ronrath",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dy-rongrath/Falcon-Admin-Dashboard-WebApp-Template.git"
+  },
+  "homepage": "https://dy-rongrath.github.io/Falcon-Admin-Dashboard-WebApp-Template/"
 }
